--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,234 @@
 /*GLOBAL*/
 
-html {
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color: #000000;
+  width: 100%;
+  font: 14px/1.2em courier, "lato";
+}
+
+.container {
+  margin: 0 auto;
+  background-color: #ffffff;
+  width: 60%;
+  padding-top: 10px;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+h3 {
+  text-align: center;
+  color: #ffffff;
+  font-size: 20px;
+}
+
+.clr {
+  clear: both;
+}
+
+/*HEADER*/
+
+.title {
+  font-size: 24px;
+  text-align: center;
+  padding-top: 40px;
+  text-transform: uppercase;
+}
+
+.navbar ul {
+  list-style-type: none;
+  text-align: center;
+  margin: auto;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #000000;
+  width: 80%;
+  padding: 15px 15px;
+}
+
+ li {
+  text-align: center;
+  display: inline;
+  padding: 10px;
+}
+
+li a:hover {
+  color: orange;
+}
+
+/*BACKGROUND IMAGES*/
+.background-image1, .background-image2, .background-image3, .background-image4 {
+  opacity: 0.9;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 25px 0px 25px 0px;
+}
+
+.background-image1 {
+  background-image: url("../media/background1.jpg");
+  min-height: 600px;
+  width: 100%;
+}
+
+.background-image2 {
+  background-image: url("../media/background2.jpg");
+  min-height: 600px;
+  width: 100%;
+}
+
+.background-image3 {
+  background-image: url("../media/background3.jpg");
+  min-height: 600px;
+  width: 100%;
+}
+
+.background-image4 {
+  background-image: url("../media/background4.jpg");
+  min-height: 600px;
+  width: 100%;
+}
+
+/* ORDER SECTION*/
+
+.h3-container {
+  background-color: black;
+  width: 30%;
+  text-align: center;
+  margin: auto;
+  padding: 3px 0 3px 0;
+  margin-bottom: 30px;
+}
+
+.text-container {
+  margin: 10px auto;
+  width: 60%;
+  border: solid black 1px;
+  padding: 3px;
+  box-sizing: border-box;
+}
+
+.order-here {
+  width: 60%;
+  text-align: center;
+  margin: auto;
+  background-color: #000000;
+  padding: 2px 0 2px 0;
+}
+
+/*Image Section*/
+.image-section {
+  width: 100%;
+  text-align: center;
+  margin:  auto;
+}
+
+.fig {
+
 
 }
 
-body {
+.fig img {
+  text-align: center;
+  float: left;
+  min-width: 49%;
+  height: 300px;
+  box-sizing: border-box;
+  margin: 5px 5px 5px 5px;
+}
 
+/*TABLE*/
+
+.table-container {
+  width: 70%;
+  text-align: center;
+  margin: auto;
+}
+
+table {
+
+}
+table, th, td{
+  width: 100%;
+  border: 1px solid #000000;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+caption {
+
+}
+
+th {
+  padding: 30px;
+}
+
+td {
+  padding: 10px;
+}
+
+/*FORM*/
+
+#contact {
+  text-align: center;
+}
+
+.form-container {
+  width: 60%;
+  margin: auto;
+  margin-bottom: 40px;
+}
+
+label {
+  display: block;
+}
+
+input {
+  width: 100%;
+  padding: 5px;
+}
+
+textarea {
+  width: 100%;
+  height: 100px;
+}
+
+button {
+  width: 15%;
+  background-color: #000000;
+  color: #ffffff;
+  font-family: courier;
+  padding: 5px;
+
+}
+
+footer {
+background-color: #000000;
+color: #ffffff;
+text-transform: uppercase;
+padding-top: 10px;
+}
+
+@media (max-width: 768px) {
+  .container, html, body{
+    width: 100%;
+    margin: 0 auto;
+  }
+  .fig, img {
+    max-width: 98%;
+    margin: 0;
+  }
+
+
+  }
+  .title {
+    font-size: 16px;
+  }
+   .text-container, input, textarea {
+     width: 90%;
+   }
 }
